# ytkids

./: .gitignore  CMakeLists.txt  README.md
resources/: resources.qrc
src/: artworkframe.cpp  artworkframe.h  config.cpp  config.h  main.cpp  mainwindow.cpp  mainwindow.h  parentalcontrol.cpp  parentalcontrol.h  playerwindow.cpp  playerwindow.h  timercontroller.cpp  timercontroller.h  version.h.in
